# javy

./: Cargo.toml  Makefile  javy_core.wasm  javy_quickjs_provider_wizened.wasm
crates/cli/: build.rs
crates/core/: Cargo.toml
crates/core/src/: main.rs  outbound_http.rs
crates/runtime/: Cargo.toml  build.rs  logging.js
crates/runtime/src/: main.rs  outbound_http.rs
wit/import/: http-types.wit  wasi-outbound-http.wit
